fixing header menu shifts

--- a/assets/style/component/_header.scss
+++ b/assets/style/component/_header.scss
@@ -22,7 +22,7 @@
 }
 
 .header-nav {
-	background: $orange;
+	background: $greyDk;
 	display: block;
 	height: 100%;
 	margin-right: 320px;
